fix(layout): fixed overflow behaviour of app container.

--- a/src/mobro/styles/_helpers.scss
+++ b/src/mobro/styles/_helpers.scss
@@ -12,6 +12,10 @@
   max-width: 20rem;
 }
 
+.mw-100 {
+  max-width: 100%;
+}
+
 .mh-100 {
   max-height: 100%;
 }
